Fix off-center close button

--- a/demo/demo.less
+++ b/demo/demo.less
@@ -71,7 +71,6 @@ main.mdl-layout__content {
 
   /* Give the button a round background, meant to look like the play button. */
   border-radius: 50%;
-  width: 32px;
   color: #000;
   background: rgba(255, 255, 255, 0.85);
 }
